<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title"
        layout="@layout/title" />

    <TextView
        android:id="@+id/forget_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp25"
        android:text="修改密码"
        android:textColor="@color/title"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageView
        android:id="@+id/phone"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp25"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp25"
        android:src="@mipmap/mobilephone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_password_text" />
    <EditText
        android:id="@+id/edit_mobile_phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp25"
        app:layout_constraintTop_toTopOf="@id/phone"
        app:layout_constraintStart_toStartOf="@id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp35"
        android:hint="@string/hint_mobile_phone"
        android:textColorHint="@color/black"
        android:background="@null"
        />
    <View
        android:id="@+id/one_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/black"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp35"
        android:layout_marginRight="@dimen/dp35"
        app:layout_constraintTop_toBottomOf="@id/phone"
        />
    <ImageView
        android:id="@+id/verification"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp25"
        android:src="@mipmap/verificationcode"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintLeft_toLeftOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/one_line"

        />

    <EditText
        android:id="@+id/edit_verification_code"
        android:layout_width="@dimen/dp140"
        android:layout_height="@dimen/dp25"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp35"
        android:background="@null"
        android:hint="@string/input_verification"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/verification"
        app:layout_constraintTop_toTopOf="@+id/verification" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/send_verificaton_code"
        android:layout_width="@dimen/dp120"
        android:layout_height="@dimen/dp25"
        app:layout_constraintTop_toTopOf="@+id/verification"
        android:text="@string/send_verificationcode"
        android:textSize="14sp"
        android:textColor="#27c38a"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/dp35"
        android:background="@drawable/verificationcode"
        />

    <View
        android:id="@+id/two_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/black"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp35"
        android:layout_marginRight="@dimen/dp35"
        app:layout_constraintTop_toBottomOf="@+id/verification"
        />


    <ImageView
        android:id="@+id/input_news_password"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp25"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp20"
        android:src="@mipmap/passwordlock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/two_line" />
    <EditText
        android:id="@+id/edit_input_news_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp25"
        app:layout_constraintTop_toTopOf="@id/input_news_password"
        app:layout_constraintStart_toStartOf="@id/input_news_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp35"
        android:hint="@string/hint_input_new_password"
        android:textColorHint="@color/black"
        android:background="@null"
        />
    <View
        android:id="@+id/three_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/black"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp35"
        android:layout_marginRight="@dimen/dp35"
        app:layout_constraintTop_toBottomOf="@id/input_news_password"
        />
    <ImageView
        android:id="@+id/input_confirm_password"
        android:layout_width="@dimen/dp18"
        android:layout_height="@dimen/dp25"
        android:layout_marginLeft="@dimen/dp50"
        android:layout_marginTop="@dimen/dp20"
        android:src="@mipmap/passwordlock"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/three_line" />
    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp25"
        app:layout_constraintTop_toTopOf="@id/input_confirm_password"
        app:layout_constraintStart_toStartOf="@id/input_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp35"
        android:hint="@string/hint_confirm_password"
        android:textColorHint="@color/black"
        android:background="@null"
        />
    <View
        android:id="@+id/four_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:background="@color/black"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp35"
        android:layout_marginRight="@dimen/dp35"
        app:layout_constraintTop_toBottomOf="@id/input_confirm_password"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_marginTop="@dimen/dp65"
        android:layout_marginRight="@dimen/dp35"
        android:layout_marginLeft="@dimen/dp35"
        app:layout_constraintTop_toBottomOf="@+id/four_line"
        android:background="@drawable/login_btn"
        />







</android.support.constraint.ConstraintLayout>